--- a/Website/src/members/templates/members/member_login.html
+++ b/Website/src/members/templates/members/member_login.html
@@ -1,6 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'bug.html' %}
 
 {% block content %}
+
+<title>Login</title>
 
 <h2>Log In</h2>
 <form action="." method="POST">{% csrf_token %}
