--- a/Website/src/templates/home.html
+++ b/Website/src/templates/home.html
@@ -3,5 +3,8 @@
 {% block content %}
 <h1>Hello world</h1>
 <p>Testing</p>
+
+<a href="{% url 'create_reservation' %}">Create Reservation</a>
+
 {% endblock %}
 
